nambahin modal box dan button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="card-body">
                 <h5 class="card-title">Balap Karung</h5>
                 <p class="card-text">Permainan balap karung adalah sebuah permainan yang melath kelincahan.</p>
-                <a href="#" class="btn btn-danger">Lihat detail....</a>
+                <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Lihat detail....</a>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tarik Tambang</h5>
                 <p class="card-text">Permainan tarik tambang adalah permainan yang melatih kekompakan team</p>
-                <a href="#" class="btn btn-danger">Lihat detail....</a>
+                <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal2">Lihat detail....</a>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="card-body">
                 <h5 class="card-title">Lempar Tepung</h5>
                 <p class="card-text">Permainan lempar tepung adalah permainan yang melatih kekompakan team</p>
-                <a href="#" class="btn btn-danger">Lihat detail....</a>
+                <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal3">Lihat detail....</a>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Hias Tumpeng</h5>
                   <p class="card-text">Hias tumpeng adalah perlombaan menghias tumpeng dengan tema kemerdekaan</p>
-                  <a href="#" class="btn btn-danger">Lihat detail....</a>
+                  <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal4">Lihat detail....</a>
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Paduan Suara</h5>
                   <p class="card-text">Bernyanyi dan menyanyikan lagu lagu kebangsaan dan lagu lagu wajib</p>
-                  <a href="#" class="btn btn-danger">Lihat detail....</a>
+                  <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal5">Lihat detail....</a>
                 </div>
               </div>
             </div>
@@ -240,6 +240,7 @@
                 mereka mengaku kalah dari sekutu. Buntut dari peristiwa ini yaitu Jepang berjanji memberikan kemerdekaan pada tanggal 24 Agustus 1945 untuk Indonesia.
               </i>
             </p>
+            <button id="tau" class="btn btn-light float-end">Sudah tau?</button>
           </div>
         </div>
       </div>
@@ -274,6 +275,163 @@
       </div>
     </section>
     <!-- Footer End -->
+    <!-- Modal box -->
+    <!-- Button trigger modal -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Lomba Balap Karung</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/karung.png" alt="" class="img-fluid" width="250px" />
+                </div>
+                <div class="col-md-6">
+                  <p><b>Sejarah :</b></p>
+                  <p>
+                    <i>balap karung diyakini dimainkan di Jakarta, khususnya masyarakat Betawi, sejak masa penjajahan Belanda. Mulanya, balap karung dimainkan oleh anak-anak berusia 6-12 tahun saat perayaan di sekolah-sekolah Belanda.</i>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger">Sudah tau?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Lomba Tarik Tambang</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/tarik.png" alt="" class="img-fluid" width="250px" />
+                </div>
+                <div class="col-md-6">
+                  <p><b>Sejarah :</b></p>
+                  <p>
+                    <i
+                      >Sejarah tarik tambang di Indonesia dikenalkan oleh bangsa Belanda di era penjajahan. Mulanya, masyarakat Indonesia dikenalkan dengan tali tambang untuk menarik benda berat, seperti batu, pasir, dan lainnya. Namun
+                      perlahan tali tersebut dijadikan permainan sebagai hiburan menjadi tarik tambang.</i
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger">Sudah tau?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Lomba Lempar Tepung</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/tepung.png" alt="" class="img-fluid" width="250px" />
+                </div>
+                <div class="col-md-6">
+                  <p><b>Sejarah :</b></p>
+                  <p>
+                    <i>Lomba ini bertujuan untuk melatih kekompakan tim dalam bekerja sama mengisi tepung. dalam tim kita saling mengandalkan dan juag percaya dalam teman satu tim. lomba ini sangat bagus untuk melatih kerja sama tim</i>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger">Sudah tau?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Lomba Paduan Suara</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/padus.png" alt="" class="img-fluid" width="250px" />
+                </div>
+                <div class="col-md-6">
+                  <p><b>Sejarah :</b></p>
+                  <p>
+                    <i>Lomba ini meningkatkan semangat juang siswa dalam bernyanyi lagu wajib nasional dan juga dalam menghargai karya lagu nasional bangsa. di lomba ini juga banyak siswa yang belajar cara bernyanyi yang benar</i>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger">Sudah tau?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Lomba Hias Tumpeng</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="img/tumpeng.png" alt="" class="img-fluid" width="250px" />
+                </div>
+                <div class="col-md-6">
+                  <p><b>Sejarah :</b></p>
+                  <p>
+                    <i>Lomba ini sangat bagus untuk melatih kedisiplinan siswa dan juga melatih kreativitas siswa dalam menyiapkan dan juga menghias tumpeng mereka semenarik mungkin.disini dapat terlihat kreativitas semua siswa.</i>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger">Sudah tau?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Box end -->
     <!-- Kumpulan Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
